--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,9 @@
 spring.application.name=demo.Krishna
 server.port = 1997
 logging.level.org.springframework.web = DEBUG
+logging.level.org.springframework.boot.autoconfigure.condition=DEBUG
 logging.level.org.hibernate = ERROR
+spring.http.log-request-details=true
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/army
 spring.datasource.username=postgres
